--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@sentry/browser": "^6.19.2",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "axios": "^0.26.1",
     "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
@@ -25,11 +27,11 @@
     "@types/history": "^4.7.6",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
-    "@types/react-router-dom": "^5.3.3",
     "@types/node": "^16.11.26",
-    "typescript": "^4.6.3",
     "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14"
+    "@types/react-dom": "^17.0.14",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
